Updated the project and made it compatible with the rust version